--- a/src/app/pages/create-simulation/create-simulation.component.html
+++ b/src/app/pages/create-simulation/create-simulation.component.html
@@ -82,9 +82,9 @@
     }
 
     <button type="submit" 
-        [disabled]="type === 'isr' ? formIsrSimulation.invalid : formIvaSimulation.invalid"
+        [disabled]="type === 'isr' ? !isIsrFormValid() : !isIvaFormValid()"
         class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-flamenco disabled:hover:text-bisque">
-        {{ type === 'isr' ? 'Crear simulación ISR' : getIvaButtonText() }}
+        {{ type === 'isr' ? getIsrButtonText() : getIvaButtonText() }}
     </button>
 </form>
 }
