--- a/src/app/components/iva-simulation/section-iva-simulation/section-iva-simulation.component.html
+++ b/src/app/components/iva-simulation/section-iva-simulation/section-iva-simulation.component.html
@@ -37,23 +37,25 @@
         </div>
 
         <div *ngIf="tableData" class="mt-4">
-            <table class="min-w-full table-auto border border-crater-brown">
-                <thead>
-                    <tr class="bg-crater-brown text-white">
-                        <th *ngFor="let header of tableData.headers" class="px-4 py-3 border border-crater-brown text-left font-bold">{{ header }}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let row of tableData.rows; let i = index" class="hover:bg-gray-50">
-                        <td class="border border-crater-brown px-4 py-3 text-crater-brown font-medium">{{ row }}</td>
-                        <td *ngFor="let header of tableData.headers.slice(1); let j = index" class="border border-crater-brown px-4 py-3 text-center">
-                            <span class="w-full p-2 rounded text-center text-crater-brown font-medium">
-                                ₡{{ (tableData.values[i] ? (tableData.values[i][header] || 0) : 0) | number:'1.0-0' }}
-                            </span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="rounded-lg overflow-hidden border border-crater-brown">
+                <table class="min-w-full table-auto">
+                    <thead>
+                        <tr class="bg-crater-brown text-white">
+                            <th *ngFor="let header of tableData.headers" class="px-4 py-3 text-left font-bold">{{ header }}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let row of tableData.rows; let i = index" class="hover:bg-gray-50 border-t border-crater-brown">
+                            <td class="px-4 py-3 text-crater-brown font-medium">{{ row }}</td>
+                            <td *ngFor="let header of tableData.headers.slice(1); let j = index" class="px-4 py-3 text-center">
+                                <span class="w-full px-4 py-2 bg-zorba rounded-md text-center text-crater-brown font-medium">
+                                    ₡{{ (tableData.values[i] ? (tableData.values[i][header] || 0) : 0) | number:'1.0-0' }}
+                                </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <div *ngIf="subsections && subsections.length > 0" class="ml-4 space-y-8">
