Update UI styles, team info, and Google Auth config
Refines button and table styles across multiple components, updates team member images and LinkedIn links, and adds a footer to the team landing page. Improves search placeholders for clarity. Modifies GoogleAuthService to use a new apiGoogleUrl environment variable, updating both environment files accordingly. Adds new images for team members Javier and Luis.

--- a/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
+++ b/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
@@ -250,7 +250,7 @@
 
     <div class="flex gap-4 justify-center mt-2">
       <button (click)="callSaveDetail()" [disabled]="detailForm.invalid" type="button"
-        class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-flamenco disabled:text-bisque">
+        class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-burnt-umber disabled:text-bisque">
         Agregar detalle
       </button>
     </div>
@@ -259,7 +259,7 @@
 
   <div class="flex gap-4 justify-center">
     <button (click)="callSave()" [disabled]="invoiceForm.invalid || this.details.length == 0" ctype="button"
-      class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-flamenco disabled:text-bisque">
+      class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-burnt-umber disabled:text-bisque">
       Registrar
     </button>
     <button type="button"
