--- a/src/app/pages/create-simulation/create-simulation.component.html
+++ b/src/app/pages/create-simulation/create-simulation.component.html
@@ -50,7 +50,7 @@
     }
 
     <button type="submit" [disabled]="formIsrSimulation.invalid"
-        class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:text-bisque disabled:bg-flamenco">
+        class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:text-bisque disabled:bg-burnt-umber">
         Crear simulación
     </button>
 </form>
