--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -8,7 +8,7 @@
             </span>
             <input (keyup)="search($event)" type="text"
                 class="bg-crater-brown text-bisque placeholder:text-bisque text-base font-bold w-full"
-                placeholder="Buscar">
+                placeholder="Buscar por proveedor">
         </div>
     </div>
 
