--- a/src/app/pages/landing-page-team/landing-page-team.component.html
+++ b/src/app/pages/landing-page-team/landing-page-team.component.html
@@ -143,9 +143,10 @@
                 [position]="'Coordinador General'" [linkedinUrl]="'https://www.linkedin.com/in/jeffryvalverde'"
                 [githubUrl]="'https://github.com/JeffryVF'">
             </app-card-team-member>
-            <app-card-team-member [imageUrl]="'../../../assets/img/team-members/rodrigo.jpg'"
+            <app-card-team-member [imageUrl]="'../../../assets/img/team-members/javier.jpg'"
                 [altImageText]="'Foto de perfil Javier Gonzales'" [name]="'Javier Gonzales'"
-                [position]="'Coordinador de Desarrollo'" [linkedinUrl]="''"
+                [position]="'Coordinador de Desarrollo'"
+                [linkedinUrl]="'https://www.linkedin.com/in/javier-gonzalez-perez-877573325?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app'"
                 [githubUrl]="'https://github.com/Jgonzalez-tech'">
             </app-card-team-member>
             <app-card-team-member [imageUrl]="'../../../assets/img/team-members/rodrigo.jpg'"
@@ -153,9 +154,10 @@
                 [position]="'Coordinador de Soporte'" [linkedinUrl]="'https://www.linkedin.com/in/rodrigorrl16/'"
                 [githubUrl]="'https://github.com/RodrigoLopez16'">
             </app-card-team-member>
-            <app-card-team-member [imageUrl]="'../../../assets/img/team-members/rodrigo.jpg'"
+            <app-card-team-member [imageUrl]="'../../../assets/img/team-members/luis.jpg'"
                 [altImageText]="'Foto de perfil Luis Nuñez'" [name]="'Luis Nuñez'" [position]="'Coordinador de Calidad'"
-                [linkedinUrl]="''" [githubUrl]="'https://github.com/luisdiego888'">
+                [linkedinUrl]="'https://www.linkedin.com/in/luis-diego-nu%C3%B1ez-5b5830352/'"
+                [githubUrl]="'https://github.com/luisdiego888'">
             </app-card-team-member>
         </div>
     </div>
@@ -268,4 +270,10 @@
             </div>
         </article>
     </div>
+
+    <footer class="py-6">
+        <div class="container mx-auto text-center">
+            <p class="text-isabelline">©2025 CodingLab. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </div>
