--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -7,7 +7,8 @@
         search
       </span>
       <input (keyup)="search($event)" type="text"
-        class="bg-crater-brown text-bisque placeholder:text-bisque text-base font-bold w-full" placeholder="Buscar">
+        class="bg-crater-brown text-bisque placeholder:text-bisque text-base font-bold w-full"
+        placeholder="Buscar por correo" />
     </div>
   </div>
 
