Add admin reports page and service with chart enhancements
Introduces a new admin reports page with multiple report views and a dedicated ReportAdminService for data retrieval. Updates chart component to support horizontal bar charts. Improves user and invoice report services for better data mapping and fixes. Updates sidebar and user reports UI for consistency.

--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -24,6 +24,9 @@
       @if (route.data['name'] == "Notificaciones" && role == "USER") {
       <p class="px-2 font-semibold text-zorba pb-1 pt-3">ANALÍTICAS</p>
       }
+      @if (route.data['name'] == "Notificaciones" && role == "SUPER_ADMIN") {
+      <p class="px-2 font-semibold text-zorba pb-1 pt-3">ANALÍTICAS</p>
+      }
       }
       }
     </nav>
