--- a/src/app/pages/reports-user/reports-user.component.html
+++ b/src/app/pages/reports-user/reports-user.component.html
@@ -4,19 +4,19 @@
     <div class="grid grid-cols-3 gap-4">
         <app-card-report [title]="'INGRESOS Y REPORTES.'" [icon]="'money_bag'"
             [description]="'Este reporte gráfico muestra de manera fácil de entender, cómo han sido los ingresos (dinero que entra) y los gastos (dinero que sale) del negocio en toda su existencia.'"
-            [buttonText]="'Ingresos y gastos'" (callClickMethod)="incomesAndExpenses = true" [bgColor]="'bg-flamenco'"
-            [textColor]="'text-crater-brown'" [bgButtonColor]="'bg-bisque'"
+            [buttonText]="'Ver ingresos y gastos'" (callClickMethod)="incomesAndExpenses = true"
+            [bgColor]="'bg-flamenco'" [textColor]="'text-crater-brown'" [bgButtonColor]="'bg-bisque'"
             [bgButtonHoverColor]="'hover:bg-crater-brown'" [bgButtonTextHoverColor]="'hover:text-bisque'">
         </app-card-report>
         <app-card-report [title]="'FLUJO DE CAJA.'" [icon]="'account_balance_wallet'"
             [description]="'El flujo de caja muestra cuánto dinero entra y sale de tu negocio en un periodo determinado. Es clave para saber si estás generando efectivo o perdiendo dinero.'"
-            [buttonText]="'Flujo de caja'" (callClickMethod)="cashFlow = true" [bgColor]="'bg-bisque'"
+            [buttonText]="'Ver flujo de caja'" (callClickMethod)="cashFlow = true" [bgColor]="'bg-bisque'"
             [textColor]="'text-crater-brown'" [bgButtonColor]="'bg-golden-glow'"
             [bgButtonHoverColor]="'hover:bg-crater-brown'" [bgButtonTextHoverColor]="'hover:text-golden-glow'">
         </app-card-report>
         <app-card-report [title]="'GASTOS POR CATEGORÍA.'" [icon]="'category'"
             [description]="'Este gráfico permite al usuario visualizar sus egresos desglosados por categorías, facilitando la identificación de los rubros donde se concentra la mayor parte de sus gastos.'"
-            [buttonText]="'Gastos por categoría'" (callClickMethod)="expenseCategories = true">
+            [buttonText]="'Ver gastos por categoría'" (callClickMethod)="expenseCategories = true">
         </app-card-report>
     </div>
 </ng-container>
