Add new admin reports and improve report data handling
Introduces new admin reports: top 10 users by invoice count, monthly income and expenses, and top 10 users by balance, with corresponding UI and service logic. Refactors user report data checks for consistency, updates color schemes for user reports, and removes unused invoice service methods. Also fixes year selection in user reports to use all invoices.

--- a/src/app/pages/reports-admin/reports-admin.component.html
+++ b/src/app/pages/reports-admin/reports-admin.component.html
@@ -182,4 +182,95 @@
         </div>
     </div>
 </ng-container>
+} @else if(incomeAndExpenses) {
+<ng-container>
+    <div class="mb-10">
+        <div class="flex flex-row w-full justify-between items-center mb-2">
+            <h1 class="text-2xl font-bold text-center text-crater-brown">Top 10 usuarios por cantidad de facturas
+                procesadas</h1>
+        </div>
+
+        <div
+            class="border border-crater-brown p-4 rounded-md w-[60rem] 2xl:w-[80rem] h-[30rem] 2xl:h-[45rem] mx-auto overflow-auto">
+            <div class="h-full w-full flex items-center justify-center">
+                @if(hasMonthlyVolumeInvoices()) {
+                <app-chart class="h-full w-full flex flex-col justify-center items-center"
+                    [labels]="reportAdminService.top10UsersByInvoiceCount$()[0].labels"
+                    [datasets]="reportAdminService.top10UsersByInvoiceCount$()[0].datasets" [type]="'bar'"
+                    [horizontal]="true">
+                </app-chart>
+                } @else{
+                <div class="flex flex-col items-center justify-center h-full w-full">
+                    <span class="material-symbols-rounded text-7xl mb-5 text-crater-brown">
+                        receipt_long
+                    </span>
+                    <p class="text-center text-crater-brown">No hay datos disponibles para mostrar.</p>
+                </div>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div class="mb-10">
+        <div class="flex flex-row w-full justify-between items-center mb-2">
+            <h1 class="text-2xl font-bold text-center text-crater-brown">Evolución mensual de ingresos y gastos en el
+                sistema</h1>
+            <select (change)="changeYear($event, 'monthlyIncomeAndExpenses')" id="year"
+                class="bg-crater-brown text-bisque text-base font-bold rounded-md px-4 py-2.5 placeholder:text-zorba focus:outline-none focus:border-golden-glow"
+                formControlName="year">
+                <option value=0 selected>Todos</option>
+                @for (year of loadInvoicesYears(invoiceService.invoices$()); track year) {
+                <option [value]="year">{{ year }}</option>
+                }
+            </select>
+        </div>
+
+        <div
+            class="border border-crater-brown p-4 rounded-md w-[60rem] 2xl:w-[80rem] h-[30rem] 2xl:h-[45rem] mx-auto overflow-auto">
+            <div class="h-full w-full flex items-center justify-center">
+                @if(hasMonthlyIncomeExpenses()) {
+                <app-chart class="h-full w-full flex flex-col justify-center items-center" [labels]="labels"
+                    [datasets]="reportAdminService.monthlyIncomeExpenses$()" [type]="'line'">
+                </app-chart>
+                } @else{
+                <div class="flex flex-col items-center justify-center h-full w-full">
+                    <span class="material-symbols-rounded text-7xl mb-5 text-crater-brown">
+                        receipt_long
+                    </span>
+                    <p class="text-center text-crater-brown">No hay datos disponibles para mostrar.</p>
+                </div>
+                }
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="flex flex-row w-full justify-between items-center mb-2">
+            <h1 class="text-2xl font-bold text-center text-crater-brown">Top 10 usuarios por mayor balance</h1>
+        </div>
+
+        <div
+            class="border border-crater-brown p-4 rounded-md w-[60rem] 2xl:w-[80rem] h-[30rem] 2xl:h-[45rem] mx-auto overflow-auto">
+            <div class="h-full w-full flex items-center justify-center">
+                @if(hasTop10UsersByBalance()) {
+                <app-chart class="h-full w-full flex flex-col justify-center items-center"
+                    [labels]="reportAdminService.top10UsersByBalance$()[0].labels"
+                    [datasets]="reportAdminService.top10UsersByBalance$()[0].datasets" [type]="'bar'">
+                </app-chart>
+                } @else{
+                <div class=" flex flex-col items-center justify-center h-full w-full">
+                    <span class="material-symbols-rounded text-7xl mb-5 text-crater-brown">
+                        receipt_long
+                    </span>
+                    <p class="text-center text-crater-brown">No hay datos disponibles para mostrar.</p>
+                </div>
+                }
+            </div>
+        </div>
+        <div class="flex justify-center mt-2">
+            <button
+                class="bg-flamenco hover:bg-golden-glow hover:text-flamenco py-2 px-4 rounded-md text-bisque font-bold"
+                (click)="closeReport('incomeAndExpenses')">Regresar</button>
+        </div>
+    </div>
+</ng-container>
 }
