--- a/src/app/pages/create-simulation/create-simulation.component.html
+++ b/src/app/pages/create-simulation/create-simulation.component.html
@@ -127,10 +127,14 @@
             [requestedCompensation]="isrSimulation.requestedCompensation"
             [totalDebtToPay]="isrSimulation.totalDebtToPay">
         </app-settlement-tax-debt>
-        <div class="flex justify-center mt-4">
+        <div class="flex justify-center mt-4 gap-2">
             <button (click)="closeSimulation()"
                 class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
                 Regresar
+            </button>
+            <button (click)="saveSimulationIsr()"
+                class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
+                Guardar
             </button>
         </div>
     </div>
@@ -147,10 +151,14 @@
         [simulationPeriod]="getIvaSimulationPeriod()"
         [simulationName]="getIvaSimulationName()"
         [simulationIdentification]="getIvaSimulationIdentification()" />
-    <div class="flex justify-center mt-4">
+    <div class="flex justify-center mt-4 gap-2">
         <button (click)="closeSimulation()"
             class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
             Regresar
+        </button>
+        <button (click)="saveSimulationIva()"
+            class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
+            Guardar
         </button>
     </div>
 </div>
