--- a/src/app/components/simulation-list/simulation-list.component.html
+++ b/src/app/components/simulation-list/simulation-list.component.html
@@ -4,30 +4,30 @@
       <tr class="text-center border border-crater-brown bg-crater-brown text-bisque">
         <th class="p-3">ID</th>
         <th class="p-3">Período</th>
+        <th class="p-3">Tipo</th>
         <th class="p-3">Nombre</th>
         <th class="p-3">Cédula</th>
         <th class="p-3">Acciones</th>
       </tr>
     </thead>
-
     <tbody>
     @for (item of simulations; track item.id) {
       <tr class="text-center text-crater-brown font-semibold border-t border-crater-brown">
         <td class="p-3">{{ item.id || 'N/A' }}</td>
         <td class="p-3">{{ simulationPeriod(item) }}</td>
+        <td class="p-3">{{ item.type }}</td>
         <td class="p-3">{{ simulationName(item) }}</td>
         <td class="p-3">{{ simulationIdentification(item) }}</td>
+
         <td class="p-3 space-x-1 flex flex-row">
-            <a [routerLink]="['/app/simulation-detail', getSimulationType(item), item.id]"
-
-
+            <a [routerLink]="['/app/simulation-detail', simulationType(item), item.id]"
                 class="bg-flamenco px-2 p-0.5 rounded-md flex items-center ml-2 hover:bg-golden-glow hover:text-flamenco text-bisque"
                 type="button">
                 <span class="material-symbols-rounded text-lg">visibility</span>
                 <span class="text-sm ml-2 font-bold">Ver</span>
             </a>
             <button
-                (click)="onDownloadPdf(item)"
+                (click)="exportPdf(item)"
                 class="bg-flamenco px-2 p-0.5 rounded-md flex items-center ml-2 hover:bg-golden-glow hover:text-flamenco text-bisque"
                 type="button">
                 <span class="material-symbols-rounded text-lg">download</span>
@@ -35,7 +35,7 @@
             </button>
 
             <button
-                (click)="onDownloadCsv(item)"
+                (click)="exportCsv(item)"
                 class="bg-flamenco px-2 p-0.5 rounded-md flex items-center ml-2 hover:bg-golden-glow hover:text-flamenco text-bisque"
                 type="button">
                 <span class="material-symbols-rounded text-lg">download</span>
