--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col px-3 justify-between h-screen bg-crater-brown pt-5">
-  <div>
+<div class="flex flex-col overflow-y-auto px-3 justify-between h-screen bg-crater-brown pt-5">
+  <div class="py-2.5">
     <div class="flex justify-center w-full">
       <img class="w-40" src="../../../../../assets/img/general/tributico-logo.png"
         alt="Logo de la aplición web TribuTico" />
@@ -27,6 +27,9 @@
       @if (route.data['name'] == "Notificaciones" && role == "SUPER_ADMIN") {
       <p class="px-2 font-semibold text-zorba pb-1 pt-3">ANALÍTICAS</p>
       }
+      @if (route.data['name'] == "Reportes" && role == "USER") {
+      <p class="px-2 font-semibold text-zorba pb-1 pt-3">SOPORTE</p>
+      }
       }
       }
     </nav>
@@ -34,7 +37,7 @@
 
   <div class="pb-5">
     <button type="button" (click)="openModal()"
-      class="flex items-center justify-between w-full px-4 py-3 text-base font-medium text-bisque transition-all duration-200 rounded-md hover:bg-zorba">
+      class="flex items-center px-2 py-2.5 text-base font-medium transition-all duration-200 text-bisque rounded-md hover:bg-zorba w-full">
       <div class="flex items-center justify-center">
         <span class="material-symbols-rounded">logout</span>
         <span class="pl-2">Salir</span>
