Enhance home and chatbot UI, add dynamic button text
Updated the home page to display different content and navigation options based on user role, including new buttons for chatbot and reports. Improved chatbot component to auto-scroll on response and refactored message handling. Added dynamic confirm button text to manual invoice form and updated related templates. Also improved button styles and removed unnecessary form disabling on login and signup pages.

--- a/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
+++ b/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
@@ -260,7 +260,7 @@
   <div class="flex gap-4 justify-center">
     <button (click)="callSave()" [disabled]="invoiceForm.invalid || this.details.length == 0" ctype="button"
       class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-burnt-umber disabled:text-bisque">
-      Registrar
+      {{textConfirmButton}}
     </button>
     <button type="button"
       class="bg-golden-glow text-crater-brown font-bold rounded px-8 py-2 hover:bg-bisque transition-colors"
