--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -45,7 +45,7 @@
 
         <button
           class="bg-flamenco text-bisque font-semibold rounded-md py-2 mt-4 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:cursor-not-allowed disabled:text-bisque disabled:bg-flamenco disabled:opacity-80"
-          type="submit" [disabled]="!frm.valid">
+          type="submit">
           Iniciar sesión
         </button>
       </form>
