--- a/src/app/pages/invoice-detail/invoice-detail.component.html
+++ b/src/app/pages/invoice-detail/invoice-detail.component.html
@@ -136,7 +136,7 @@
         <div class="flex justify-start">
 
             <button (click)="openDeleteModal()"
-                class="bg-golden-glow text-crater-brown py-1 px-3 rounded-md cursor-pointer font-bold hover:bg-bisque transition-colors flex items-center"
+                class="bg-golden-glow text-crater-brown py-1 px-3 rounded-md cursor-pointer font-bold border-2 border-transparent hover:bg-bisque hover:border-golden-glow transition-colors flex items-center"
                 type="button">
                 <span class="material-symbols-rounded text-lg text-crater-brown">delete</span>
                 <span class="text-crater-brown text-sm font-bold ml-2">Eliminar</span>
