--- a/src/app/pages/auth/sign-up/signup.component.html
+++ b/src/app/pages/auth/sign-up/signup.component.html
@@ -113,7 +113,6 @@
         </div>
       </div>
 
-      <!-- Repetir contraseña -->
       <div class="flex flex-col">
         <label class="text-bisque font-semibold mb-1" for="confirmPassword">Repetir contraseña<span
             class="text-burnt-umber">*</span></label>
@@ -137,7 +136,7 @@
       <div class="col-span-2">
         <button
           class="bg-flamenco text-bisque font-bold rounded-md py-2 w-full mb-6 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:text-bisque disabled:bg-flamenco"
-          [disabled]="!frm.valid" type="submit">
+          type="submit">
           Registrarse
         </button>
         <div *ngIf="signUpError" class="text-flamenco text-center font-semibold mt-2">{{signUpError}}</div>
