--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,16 +4,17 @@
     </span>
 
     <h1 class="text-crater-brown text-center font-black text-2xl mb-3">
-        Bienvenido/a@if(role == "SUPER_ADMIN") {al panel de administración}!
+        Bienvenido/a @if(role == "SUPER_ADMIN") {al panel de administración}!
         <br>¿Qué deseas realizar el día de hoy?
     </h1>
 
     <div class="grid [grid-template-columns:1fr_2fr] gap-4 w-full h-full px-4 max-w-screen-2xl">
         <div
             class="flex flex-col justify-center items-center bg-bisque rounded-md h-full w-full px-8 py-6 2xl:px-12 border border-crater-brown/30">
+            @if(role == "USER") {
             <div class="w-fit justify-end items-end">
                 <div class="flex justify-center items-center w-full">
-                    <img src=" ../../../../../assets/img/homepage/messages-illustration.png"
+                    <img src="../../../../../assets/img/homepage/messages-illustration.png"
                         alt="Ilustración de mensajes" class="w-full 2xl:w-auto mb-4" loading="eager" />
                 </div>
                 <h5 class="text-crater-brown font-black mb-2 text-2xl w-full text-left">
@@ -24,7 +25,30 @@
                     Interactúa con el asistente virtual para resolver dudas y acceder a información.
                 </p>
             </div>
+            <div class="flex flex-col items-start justify-start mt-4 w-full">
+                <button
+                    class="bg-golden-glow text-crater-brown font-bold px-4 py-2 text-lg rounded-md border-2 border-transparent hover:bg-bisque hover:border-golden-glow"
+                    [routerLink]="['/app/chatbot']">
+                    Chatbot
+                </button>
+            </div>
+            } @else {
+            <div class="w-fit justify-end items-end">
+                <div class="flex justify-center items-center w-full">
+                    <img src="../../../../../assets/img/homepage/messages-illustration.png"
+                        alt="Ilustración de administración" class="w-full 2xl:w-auto mb-4" loading="eager" />
+                </div>
+                <h5 class="text-crater-brown font-black mb-2 text-2xl w-full text-left">
+                    GESTIONA LA PLATAFORMA CON EFICIENCIA.
+                </h5>
+                <p class="text-sm 2xl:text-base font-normal text-crater-brown">
+                    Accede a herramientas clave para supervisar usuarios, revisar métricas del sistema y mantener el
+                    buen funcionamiento del entorno.
+                </p>
+            </div>
+            }
         </div>
+
         <div class="flex flex-col gap-4 h-full w-full">
             <div class="grid grid-cols-2 gap-4 flex-1">
                 @if(role == "USER") {
@@ -63,7 +87,11 @@
                 <app-card [icons]="['edit_notifications']" [iconsColor]="'text-bisque'"
                     [backgroundColor]="'bg-crater-brown'" [title]="'NOTIFICA A TUS USUARIOS.'"
                     [textColor]="'text-bisque'"
-                    [description]="'Envía alertas, recordatorios o mensajes importantes de forma rápida y sencilla.'" />
+                    [description]="'Envía alertas, recordatorios o mensajes importantes de forma rápida y sencilla.'"
+                    [firstButtonBackgroundColor]="'bg-golden-glow'" [firstButtonTextColor]="'text-crater-brown'"
+                    [firstButtonText]="'Notificaciones'" [firstButtonRoute]="'notification'"
+                    [firstButtonHoverBgColor]="'hover:bg-bisque'"
+                    [firstButtonHoverTextColor]="'hover:text-crater-brown'" />
                 }
 
             </div>
@@ -72,13 +100,16 @@
                 [title]="'ACCEDE A INFORMACION VISUAL DE TUS FINANZAS Y ESTABLECE METAS.'"
                 [textColor]="'text-crater-brown'"
                 [description]="'Visualiza tus ingresos y egresos mensuales, flujo de caja, distribución de egresos por categoría y otros indicadores clave. Además, crea metas personalizadas basadas en tu historial para mejorar tu salud financiera.'"
-                [firstButtonText]="'Reportes'" [firstButtonRoute]="'reports'" [firstButtonBackgroundColor]="'bg-bisque'"
-                [firstButtonTextColor]="'text-crater-brown'" [firstButtonHoverBgColor]="'hover:bg-crater-brown'"
-                [firstButtonHoverTextColor]="'hover:text-bisque'" />
+                [firstButtonText]="'Reportes'" [firstButtonRoute]="'reports-user'"
+                [firstButtonBackgroundColor]="'bg-bisque'" [firstButtonTextColor]="'text-crater-brown'"
+                [firstButtonHoverBgColor]="'hover:bg-crater-brown'" [firstButtonHoverTextColor]="'hover:text-bisque'" />
             } @else {
             <app-card [icons]="['bar_chart_4_bars']" [iconsColor]="'text-bisque'" [backgroundColor]="'bg-flamenco'"
                 [title]="'VISUALIZA REPORTES DEL SISTEMA CON DATOS CLAVE.'" [textColor]="'text-crater-brown'"
-                [description]="'Consulta gráficos detallados sobre usuarios registrados, estado de cuentas, evolución mensual de ingresos y egresos, balance neto por usuario, total de facturas procesadas, proporción entre ingresos y egresos, así como rankings de usuarios según actividad e ingresos generados.'" />
+                [description]="'Consulta gráficos detallados sobre usuarios registrados, estado de cuentas, evolución mensual de ingresos y egresos, balance neto por usuario, total de facturas procesadas, proporción entre ingresos y egresos, así como rankings de usuarios según actividad e ingresos generados.'"
+                [firstButtonText]="'Reportes'" [firstButtonRoute]="'reports-admin'"
+                [firstButtonBackgroundColor]="'bg-bisque'" [firstButtonTextColor]="'text-crater-brown'"
+                [firstButtonHoverBgColor]="'hover:bg-crater-brown'" [firstButtonHoverTextColor]="'hover:text-bisque'" />
             }
         </div>
     </div>
