--- a/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
+++ b/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
@@ -99,7 +99,7 @@
     <div class="flex flex-col gap-2 flex-1">
       <label class="text-bisque font-bold" for="email">Correo electrónico<span class="text-burnt-umber">*</span></label>
       <input id="email" formControlName="email" type="text"
-        class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba rounded p-2 focus:outline-none focus:border-golden-glow"
+        class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba rounded p-2 focus:outline-none focus:border-golden-glow disabled:bg-zorba disabled:opacity-80 disabled:cursor-not-allowed"
         placeholder="Correo" />
       @if (invoiceForm.controls['email'].invalid && (invoiceForm.controls['email'].dirty ||
       invoiceForm.controls['email'].touched)) {
@@ -248,13 +248,22 @@
       }
     </div>
 
-    <div class="flex gap-4 justify-center mt-2">
-      <button (click)="callSaveDetail()" [disabled]="detailForm.invalid" type="button"
-        class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-burnt-umber disabled:text-bisque">
-        Agregar detalle
-      </button>
+    <div class="flex gap-4 justify-center">
+      <div class="flex gap-4 justify-center mt-2">
+        <button (click)="callSaveDetail()" [disabled]="detailForm.invalid" type="button"
+          class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-burnt-umber disabled:text-bisque">
+          {{ isEditingDetail ? 'Guardar' : 'Agregar detalle' }}
+        </button>
+      </div>
+      @if(isEditingDetail) {
+      <div class="flex gap-4 justify-center mt-2">
+        <button (click)="cancelEdit()" [disabled]="detailForm.invalid" type="button"
+          class="bg-golden-glow text-crater-brown font-bold rounded px-8 py-2 hover:bg-bisque transition-colors">
+          Cancelar
+        </button>
+      </div>
+      }
     </div>
-
   </form>
 
   <div class="flex gap-4 justify-center">
