--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -101,7 +101,7 @@
               class="text-burnt-umber">*</span></label>
           @if (isEditing) {
           <input formControlName="email" type="text" placeholder="Correo electrónico"
-            class="w-full p-2 rounded-md border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba font-bold focus:outline-none focus:border-golden-glow" />
+            class="w-full p-2 rounded-md border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba font-bold focus:border-golden-glow focus:outline-none focus:ring-2 disabled:bg-zorba disabled:opacity-80 disabled:cursor-not-allowed" />
           <div class="min-h-[1rem]">
             @if (userForm.get('email')?.errors?.['required'] && userForm.get('email')?.touched) {
             <p class="text-sm text-burnt-umber">Este campo es obligatorio</p>
