--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -6,7 +6,7 @@
         <!-- Panel izquierdo - Lista de notificaciones (ancho fijo) -->
         <div class="col-span-1 border-bisque/30 border rounded-md p-2 h-[43rem] overflow-y-auto w-[350px]">
             @if(allNotifications().length > 0) {
-            @for(item of allNotifications(); track item.id) {
+            @for(item of allNotifications().slice().reverse(); track item.id) {
             <div (click)="selectNotification(item)"
                 class="flex flex-col items-start py-2 pr-4 hover:bg-zorba transition-colors rounded-md cursor-pointer w-full"
                 [class.bg-zorba]="selectedNotification?.id === item.id">
@@ -74,7 +74,7 @@
                         Marcar como leída
                     </button>
                 </div>
-            }
+                }
             </div>
             } @else {
             <div class="h-full flex items-center justify-center">
