--- a/src/app/components/app-layout/app-layout.component.html
+++ b/src/app/components/app-layout/app-layout.component.html
@@ -11,7 +11,7 @@
     <app-topbar></app-topbar>
 
     <main class="flex-1 overflow-y-auto h-full">
-      <div class="py-6 px-4 min-h-full w-full flex justify-center items-center">
+      <div class="py-6 px-4 min-h-full w-full flex justify-center items-start">
         <router-outlet></router-outlet>
       </div>
     </main>
