Add functionality to view goals

--- a/src/app/pages/goals/goals.component.html
+++ b/src/app/pages/goals/goals.component.html
@@ -6,5 +6,15 @@
       (saveGoal)="saveGoal($event)"
       (cancelForm)="cancelForm()">
     </app-goals-form>
+
+     <h2 class="text-4xl font-bold text-crater-brown mt-10 mb-4">
+      ¿Quieres ver tus metas actuales?
+    </h2>
+
+    <a 
+      routerLink="/app/goals-view"
+      class="bg-flamenco text-bisque py-2 px-6 rounded-md font-bold text-lg hover:bg-golden-glow hover:text-flamenco transition-colors">
+      Ver Metas
+    </a>
   </div>
 </div>
