--- a/src/app/components/goals-form/goals-form.component.html
+++ b/src/app/components/goals-form/goals-form.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex items-start justify-center mt-20">
+<div class="w-full flex items-start justify-center mt-10">
   <div class="text-center w-full max-w-2xl">
     
     <div class="bg-crater-brown rounded-lg p-8 shadow-2xl">
@@ -48,7 +48,7 @@
             Objetivo
           </label>
           <select id="objective" 
-                  formControlName="Objective"
+                  formControlName="objective"
                   class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md w-full p-3 focus:outline-none focus:border-golden-glow">
             @for (option of objectiveOptions; track option.value) {
               <option [value]="option.value">{{ option.label }}</option>
