Display goal recommendations and update goal creation
Show the goal's recommendations in the goals list component. Update the goal creation logic in GoalsService to include the recommendations field. Also, remove LoaderComponent import from goals-view.component.ts as it is not used.

--- a/src/app/components/goals-list/goals-list.component.html
+++ b/src/app/components/goals-list/goals-list.component.html
@@ -35,7 +35,7 @@
 
       <p class="text-crater-brown font-bold text-lg">Recomendación</p>
       <div class="border-2 border-crater-brown rounded p-2 min-h-[5rem] break-all whitespace-pre-wrap text-crater-brown font-semibold">
-        <!--{{ recomendacion }}-->
+        {{ goal.recommendations }}
       </div>
 
       <div class="flex justify-center mt-4">
